@@ -36,6 +36,20 @@ name|org
 operator|.
 name|apache
 operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|TieredMergePolicy
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|solr
 operator|.
 name|SolrTestCaseJ4
@@ -536,26 +550,16 @@ argument_list|(
 literal|"indexDefaults/mergePolicy/@class"
 argument_list|)
 decl_stmt|;
-name|assertTrue
+name|assertEquals
 argument_list|(
-name|mergePolicy
-operator|+
-literal|" is not equal to "
-operator|+
-name|SolrIndexConfig
+name|TieredMergePolicy
 operator|.
-name|DEFAULT_MERGE_POLICY_CLASSNAME
+name|class
+operator|.
+name|getName
+argument_list|()
 argument_list|,
 name|mergePolicy
-operator|.
-name|equals
-argument_list|(
-name|SolrIndexConfig
-operator|.
-name|DEFAULT_MERGE_POLICY_CLASSNAME
-argument_list|)
-operator|==
-literal|true
 argument_list|)
 expr_stmt|;
 name|String
