@@ -1,0 +1,209 @@
+begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
+begin_package
+DECL|package|org.apache.solr.core
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|core
+package|;
+end_package
+
+begin_comment
+comment|/**  * Licensed to the Apache Software Foundation (ASF) under one or more  * contributor license agreements.  See the NOTICE file distributed with  * this work for additional information regarding copyright ownership.  * The ASF licenses this file to You under the Apache License, Version 2.0  * (the "License"); you may not use this file except in compliance with  * the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
+end_comment
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|IndexWriterConfig
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|MergePolicy
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|TieredMergePolicy
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|SolrTestCaseJ4
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|BeforeClass
+import|;
+end_import
+
+begin_class
+DECL|class|TestMergePolicyConfig
+specifier|public
+class|class
+name|TestMergePolicyConfig
+extends|extends
+name|SolrTestCaseJ4
+block|{
+annotation|@
+name|BeforeClass
+DECL|method|beforeClass
+specifier|public
+specifier|static
+name|void
+name|beforeClass
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|initCore
+argument_list|(
+literal|"solrconfig-mergepolicy.xml"
+argument_list|,
+literal|"schema.xml"
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testTieredMergePolicyConfig
+specifier|public
+name|void
+name|testTieredMergePolicyConfig
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|IndexWriterConfig
+name|iwc
+init|=
+name|solrConfig
+operator|.
+name|defaultIndexConfig
+operator|.
+name|toIndexWriterConfig
+argument_list|(
+name|h
+operator|.
+name|getCore
+argument_list|()
+operator|.
+name|getSchema
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|MergePolicy
+name|mp
+init|=
+name|iwc
+operator|.
+name|getMergePolicy
+argument_list|()
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|mp
+operator|instanceof
+name|TieredMergePolicy
+argument_list|)
+expr_stmt|;
+name|TieredMergePolicy
+name|tieredMP
+init|=
+operator|(
+name|TieredMergePolicy
+operator|)
+name|mp
+decl_stmt|;
+comment|// mp-specific setter
+name|assertEquals
+argument_list|(
+literal|19
+argument_list|,
+name|tieredMP
+operator|.
+name|getMaxMergeAtOnceExplicit
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// make sure we apply compoundFile and mergeFactor
+name|assertEquals
+argument_list|(
+literal|false
+argument_list|,
+name|tieredMP
+operator|.
+name|getUseCompoundFile
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|7
+argument_list|,
+name|tieredMP
+operator|.
+name|getMaxMergeAtOnce
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// make sure we overrode segmentsPerTier (split from maxMergeAtOnce out of mergeFactor)
+name|assertEquals
+argument_list|(
+literal|9D
+argument_list|,
+name|tieredMP
+operator|.
+name|getSegmentsPerTier
+argument_list|()
+argument_list|,
+literal|0.001
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+end_class
+
+end_unit
+
